fix: overflowing expression over keypad

--- a/src/components/Display.scss
+++ b/src/components/Display.scss
@@ -4,6 +4,7 @@
   font-weight: 200;
   flex: 0 0 auto;
   width: 100%;
+  height: 100%;
   padding: 5px;
 
   $result-height: 60px;
